# projet-inpainting

./: .gitignore  CMakeLists.txt  Front.cpp  Front.h  Image.cpp  Image.h  Inpainter.cpp  Inpainter.h  Loc.cpp  Loc.h  Patch.cpp  Patch.h  Pixel.cpp  Pixel.h  README.md  class.h  main.cpp  main_BACKUP_891.cpp  utils.cpp  utils.h
Inpainter/: Front.cpp  Front.h  Image.cpp  Patch.cpp  Patch.h  Pixel.h
